# backend/src/routes/endPoints.js
@@ -1,18 +1,24 @@
-const express = require('express')
+import { Router } from 'express';
 
-const router = express.Router()
+const router = Router()
 
-const HotelOffersRoutes = require("./HotelOffersRoutes.js");
-const HotelOfferRoutes = require("./HotelOfferRoutes.js");
-const HotelRoutes = require("./HotelRoutes.js");
+import HotelOffersRoutes from "./HotelOffersRoutes.js";
+import OfferRoutes from "./OfferRoutes.js";
+import HotelRoutes from "./HotelRoutes.js";
 
 const initializeEndpoints = (app) => {
     
     router.use("/v1/hotel-offers", HotelOffersRoutes);
-    router.use("/v1/hotel-offer", HotelOfferRoutes);
-    router.use("/v1/hotel", HotelRoutes);
+    router.use("/v1/offers", OfferRoutes);
+    router.use("/v1/hotels", HotelRoutes);
+
+    router.use("/v1/", (req, res) => {
+        res.status(200).json({
+            message: "Welcome to the Hotel Offers API"
+        })
+    });
 
     app.use(router);
 };
 
-module.exports = initializeEndpoints;
+export default initializeEndpoints;
